# computer-vision

./: CMakeLists.txt  Readme.md
3D_gaussian_splatting/: readme.md
bundle_adjustment/: readme.md
bundle_adjustment/ba_uni_washington/: CMakeLists.txt  bundle_adjustment.cpp  initial.ply  optimized.ply  readme.md  utilities.hpp
bundle_adjustment/simple_example/: CMakeLists.txt  Dockerfile  ba_core.cpp  ba_core.hpp  bare_minimal.json  bundle_adjustment.cpp  bundle_adjustment_only_obs.cpp  bundle_adjustment_tri_wpoints_noisy_2d.cpp  bundle_adjustment_triangulate_world_points.cpp  utilities.hpp  visualization.py
bundle_adjustment/simple_example/jsons/: answer_only_obs.json  answer_tri_wpoints_noisy_2d.json  answer_triangulated_world_points.json
test/: answer.json  compare_error.cpp  read_and_write_json.cpp  read_n_check_json_eigen.cpp  triangulation.cpp  visualization.py
